# pyglet-particle-system

./: LICENSE  README.md  main.py  particles.py  physics.py  pyproject.toml  requirements.txt  setup.py
pyglet_particles/: particles.py
